adjustments for committed suggestions