@@ -23,6 +23,7 @@ import static javax.ws.rs.core.Response.Status.BAD_REQUEST;
 import static javax.ws.rs.core.Response.Status.OK;
 import static org.apache.polaris.service.it.env.PolarisClient.polarisClient;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 import com.google.common.collect.ImmutableMap;
@@ -60,6 +61,7 @@ import org.apache.iceberg.catalog.TableCommit;
 import org.apache.iceberg.catalog.TableIdentifier;
 import org.apache.iceberg.exceptions.CommitFailedException;
 import org.apache.iceberg.exceptions.ForbiddenException;
+import org.apache.iceberg.exceptions.RESTException;
 import org.apache.iceberg.expressions.Expressions;
 import org.apache.iceberg.io.ResolvingFileIO;
 import org.apache.iceberg.rest.RESTCatalog;
@@ -1270,7 +1272,7 @@ public class PolarisRestCatalogIntegrationTest extends CatalogTests<RESTCatalog>
 
     genericTableApi.dropGenericTable(currentCatalogName, tableIdentifier);
 
-    Assertions.assertThatCode(
+    assertThatCode(
             () -> genericTableApi.getGenericTable(currentCatalogName, tableIdentifier))
         .isInstanceOf(ProcessingException.class);
 
@@ -1354,16 +1356,18 @@ public class PolarisRestCatalogIntegrationTest extends CatalogTests<RESTCatalog>
     TableIdentifier tableIdentifier = TableIdentifier.of(namespace, "tbl1");
     restCatalog.createTable(tableIdentifier, SCHEMA);
 
-    assertThat(catalogApi.loadTable(currentCatalogName, tableIdentifier, "ALL"))
-        .isEqualTo(OK.getStatusCode());
-    assertThat(catalogApi.loadTable(currentCatalogName, tableIdentifier, "all"))
-        .isEqualTo(OK.getStatusCode());
-    assertThat(catalogApi.loadTable(currentCatalogName, tableIdentifier, "refs"))
-        .isEqualTo(OK.getStatusCode());
-    assertThat(catalogApi.loadTable(currentCatalogName, tableIdentifier, "REFS"))
-        .isEqualTo(OK.getStatusCode());
-    assertThat(catalogApi.loadTable(currentCatalogName, tableIdentifier, "not-real"))
-        .isEqualTo(BAD_REQUEST.getStatusCode());
+    assertThatCode(() -> catalogApi.loadTable(currentCatalogName, tableIdentifier, "ALL"))
+        .doesNotThrowAnyException();
+    assertThatCode(() -> catalogApi.loadTable(currentCatalogName, tableIdentifier, "all"))
+        .doesNotThrowAnyException();
+    assertThatCode(() -> catalogApi.loadTable(currentCatalogName, tableIdentifier, "refs"))
+        .doesNotThrowAnyException();
+    assertThatCode(() -> catalogApi.loadTable(currentCatalogName, tableIdentifier, "REFS"))
+        .doesNotThrowAnyException();
+    assertThatCode(() -> catalogApi.loadTable(currentCatalogName, tableIdentifier, "not-real"))
+        .isInstanceOf(RESTException.class)
+        .hasMessageContaining("Unrecognized snapshots")
+        .hasMessageContaining("code=" + BAD_REQUEST.getStatusCode());
 
     catalogApi.purge(currentCatalogName, namespace);
   }
@@ -1384,30 +1388,14 @@ public class PolarisRestCatalogIntegrationTest extends CatalogTests<RESTCatalog>
     table.newAppend().appendFile(FILE_B).commit();
     table.manageSnapshots().setCurrentSnapshot(snapshotIdA).commit();
 
-    String ns = RESTUtil.encodeNamespace(tableIdentifier.namespace());
-    try (Response res =
-        catalogApi
-            .request(
-                "v1/{cat}/namespaces/" + ns + "/tables/{table}",
-                Map.of("cat", currentCatalogName, "table", tableIdentifier.name()),
-                Map.of("snapshots", "all"))
-            .get()) {
-      LoadTableResponse responseContent = res.readEntity(LoadTableResponse.class);
-      assertThat(responseContent.tableMetadata().snapshots().size()).isEqualTo(2);
-    }
+    var allSnapshots =
+        catalogApi.loadTable(currentCatalogName, tableIdentifier, "ALL").tableMetadata().snapshots();
+    assertThat(allSnapshots).hasSize(2);
 
-    try (Response res =
-        catalogApi
-            .request(
-                "v1/{cat}/namespaces/" + ns + "/tables/{table}",
-                Map.of("cat", currentCatalogName, "table", tableIdentifier.name()),
-                Map.of("snapshots", "refs"))
-            .get()) {
-      LoadTableResponse responseContent = res.readEntity(LoadTableResponse.class);
-      assertThat(responseContent.tableMetadata().snapshots().size()).isEqualTo(1);
-      assertThat(responseContent.tableMetadata().snapshots().get(0).snapshotId())
-          .isEqualTo(snapshotIdA);
-    }
+    var refsSnapshots =
+        catalogApi.loadTable(currentCatalogName, tableIdentifier, "REFS").tableMetadata().snapshots();
+    assertThat(refsSnapshots).hasSize(1);
+    assertThat(refsSnapshots.getFirst().snapshotId()).isEqualTo(snapshotIdA);
 
     catalogApi.purge(currentCatalogName, namespace);
   }
